--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Homepage">
     <meta name="keywords" content="UC, Berkeley, CS, EECS, Computer, Science, Michael, Lavva, Homepage, Microservices, NLP, Backend, Data, Software, Engineering">
     <meta name="author" content="Michael Lavva">
-    <title>Michael Lavva</title>
+    <title>Homepage</title>
   </head>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -38,7 +38,7 @@
                  </div>
               </div>
            <h3>Experience</h3>
-           <a href="https://www.salesforce.com">
+           <a href="https://www.salesforce.com" target="_blank">
               <div class="card">
                  <div class="container">
                     <p align="left"><b>Salesforce</b><img src="images/icons/salesforce.png" align="right" height="50" width="50" alt="Salesforce"></p>
@@ -85,8 +85,8 @@
            <div class="card">
               <div class="container">
                  <p align="left"><b>Additional Experience:</b></p>
-                 <p align="left"><a href="https://www.jiva.com" target="_blank"> Software Developer Intern - Jiva - <i>Palo Alto, CA &#183; June 2015 - December 2015</i></a></p>
-                 <p align="left"><a href="https://cosmos.uci.edu" target="_blank"> Student Researcher - COSMOS at UC Irvine - <i>Irvine, CA &#183; June 2013 - August 2013</i></a></p>
+                 <p align="left">Software Developer Intern - Jiva - <i>Palo Alto, CA &#183; June 2015 - December 2015</i></p>
+                 <p align="left">Student Researcher - COSMOS at UC Irvine - <i>Irvine, CA &#183; June 2013 - August 2013</i></p>
               </div>
            </div>
        	<h3>Education</h3>
@@ -114,17 +114,17 @@
                   <p align="left"><b>Computer Science Classes</b></p>
 
                   <p align="left"><u>Upper Division:</u></p>
-                  <p align="left"><a href="https://cs170.org" target="_blank">CS170 - Efficient Algorithms and Intractable Problems - <i>Spring 2019</i></a></p>
-                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs164/" target="_blank">CS164 - Programming Languages and Compilers - <i>Fall 2020</i></a></p>
-                  <p align="left"><a href="https://cs186berkeley.net" target="_blank">CSW186 - Introduction to Database Systems - <i>Spring 2019</i></a></p>
-                  <p align="left"><a href="https://cs161.org" target="_blank">CS161 - Computer Security - <i>Spring 2019</i></a></p>
-                  <p align="left"><a href="http://cs168.io" target="_blank">CS168 - Introduction to the Internet: Architecture and Protocols - <i>Spring 2020</i></a></p>
+                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs164/" target="_blank">CS164 - Programming Languages and Compilers - <i>Fall 2020</i></a> <a class="link" href="projects.html" target="_blank">(Compilers Project)</i></a></p>
+                  <p align="left"><a href="https://cs170.org" target="_blank">CS170 - Efficient Algorithms and Intractable Problems - <i>Spring 2019</i></a> <a class="link" href="projects.html" target="_blank"></i></a></p>
+                  <p align="left"><a href="https://cs186berkeley.net" target="_blank">CSW186 - Introduction to Database Systems - <i>Spring 2019</i></a> <a class="link" href="projects.html" target="_blank">(Database Project)</i></a></p>
+                  <p align="left"><a href="https://cs161.org" target="_blank">CS161 - Computer Security - <i>Spring 2019</i></a> <a class="link" href="projects.html" target="_blank">(Encrypted File Sharing System Project)</i></a></p>
+                  <p align="left"><a href="http://cs168.io" target="_blank">CS168 - Introduction to the Internet: Architecture and Protocols - <i>Spring 2020</i></a> <a class="link" href="projects.html" target="_blank">(Network Routing Project)</i></a></p>
                   <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs195/" target="_blank">CS195 - Social Implications of Computer Technology - <i>Spring 2019</i></a></p>
                   <p align="left"><a href="https://www2.eecs.berkeley.edu/Courses/CS197/" target="_blank">CS197 - Field Study - <i>Spring 2020</i></a></p>
 
                   <p align="left"><u>Lower Division:</u></p>
-                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs61a/" target="_blank">CS61A - Structure and Interpretation of Computer Programs - <i>Spring 2017</i></a></p>
-                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs61b/" target="_blank">CS61B - Data Structures - <i>Fall 2017</i></a></p>
+                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs61a/" target="_blank">CS61A - Structure and Interpretation of Computer Programs - <i>Spring 2017</i></a> <a class="link" href="projects.html" target="_blank">(Yelp Maps Project, Scheme Interpreter Project)</i></a></p>
+                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs61b/" target="_blank">CS61B - Data Structures - <i>Fall 2017</i></a> <a class="link" href="projects.html" target="_blank">(Gitlet Project)</i></a></p>
                   <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs61c/" target="_blank">CS61C - Great Ideas in Computer Architecture (Machine Structures) - <i>Fall 2018</i></a></p>
                   <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs70/" target="_blank">CS70 - Discrete Mathematics and Probability Theory - <i>Spring 2018</i></a></p>
                   <p align="left"><a href="https://www.eecs16a.org" target="_blank">EE16A - Designing Information Devices and Systems I - <i>Spring 2018</i></a></p>
@@ -132,7 +132,7 @@
 
                   <p align="left"><u>High School:</u></p>
                   <p align="left">CS Capstone Project - <i>Senior Year</i></p>
-                  <p align="left">AP Computer Science - <i>Junior Year</i></p>
+                  <p align="left">AP Computer Science - <i>Junior Year</i> <a class="link" href="projects.html" target="_blank">(HiVolts Project)</i></a></p>
                   <p align="left">Advanced Java - <i>Sophomore Year</i></p>
                   <p align="left">Intro to Java - <i>Freshman Year</i></p>
                 </div>
@@ -144,11 +144,11 @@
 
                   <p align="left"><u>Upper Division:</u></p>
                   <p align="left"><a href="https://bcourses.berkeley.edu/courses/1487769" target="_blank">
-                  CSW182 - Designing, Visualizing, and Understanding Deep Neural Networks - <i>Spring 2020</i></a></p>
+                  CSW182 - Designing, Visualizing, and Understanding Deep Neural Networks - <i>Spring 2020</i></a> (Robust and Generalizable Computer Vision Classification Paper)</p>
                   <p align="left"><a href="http://people.ischool.berkeley.edu/~dbamman/nlp18.html" target="_blank">
-                  Info 159 - Natural Language Processing - <i>Fall 2018</i></a></p>
+                  Info 159 - Natural Language Processing - <i>Fall 2018</i></a><a class="link" href="projects.html" target="_blank"> (Seq2Seq Chatbot Project)</i></a></p>
                   <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs188/" target="_blank">CS188 - Introduction to Artificial Intelligence - <i>Fall 2018</i></a></p>
-                  <p align="left"><a href="http://www.ds100.org" target="_blank"> Data 100 - Principles and Techniques of Data Science - <i>Fall 2018</i></a></p>
+                  <p align="left"><a href="http://www.ds100.org" target="_blank"> Data 100 - Principles and Techniques of Data Science - <i>Fall 2018</i></a> <a class="link" href="projects.html" target="_blank"> (Taxi Rides Project)</i></a></p>
                   <p align="left"><a href="http://c188.ced.berkeley.edu" target="_blank">Geog C188 - Geographic Information Science - <i>Fall 2020</i></a></p>
                   <p align="left"><a href="https://hce-sts.org" target="_blank"> Data 104 - Human Contexts and Ethics of Data - <i>Spring 2020</i></a></p>
                   
@@ -161,7 +161,7 @@
             <div class="card">
                 <div class="container">
                   <p align="left"><b>Robust and Generalizable Computer Vision Classification</b>
-                  <a class="link" href="https://github.com/mlavva/yolo9000" target="_blank"><img src="images/papers/cs182_figure.png" align="right" height="226" width="100" alt="CS182 Figure"></a> <a class="link" href="https://mlavva.github.io/pdfs/cs182_report_robust_and_generalizable_computer_vision_classification.pdf" target="_blank"><img src="images/papers/cs182_report_img.png" align="right" height="198" width="153" alt="CS182 Report"></a></p>
+                  <a class="link" href="images/papers/cs182_figure.png" target="_blank"><img src="images/papers/cs182_figure.png" align="right" height="226" width="100" alt="CS182 Figure"></a> <a class="link" href="https://mlavva.github.io/pdfs/cs182_report_robust_and_generalizable_computer_vision_classification.pdf" target="_blank"><img src="images/papers/cs182_report_img.png" align="right" height="198" width="153" alt="CS182 Report"></a></p>
                   <p align="left">May 14, 2020</p>
                   <p align="left"><i>Abstract:</i></p>
                   <p align="left">We created a robust computer vision classifier that performs well in a dataset that contains perturbations. To achieve this, we used various data augmentation and other deep learning model techniques, such as model ensembling, image denoising, adversarial training, and attention networks. These methods helped improve the robustness against both naturally perturbed and adversarial datasets. In addition, we created class action map visualizations for our models to help understand how the model makes its classification decisions. Through these techniques, we achieved a 71.1% Top 1 Accuracy and 90.0% Top 5 Accuracy on the Tiny-ImageNet classification challenge.</p>
@@ -169,6 +169,31 @@
                   <p align="left"><a class="link" href="https://mlavva.github.io/pdfs/cs182_report_robust_and_generalizable_computer_vision_classification.pdf" target="_blank">
                   Paper</a>, <a class="link" href="https://github.com/mlavva/yolo9000" target="_blank">
                   GitHub Repo</a></p>
+                </div>
+           </div>
+        <h3>Projects</h3>
+            <div class="card">
+                <div class="container">
+                  <p align="left"><b>Compilers Project:</b><a class="link" href="images/projects/compilers_project/compilers-ast-project_figure.png" target="_blank"><img src="images/projects/compilers_project/compilers-ast-project_figure.png" align="right" height="170" width="150" alt="Compilers Project Figure"></a></p>
+                  <p align="left">Worked with a project group to build a compiler for the <a class="link" href="https://chocopy.org" target="_blank">ChocoPy</a> language. Completed lexing & parsing, semantic analysis, and code generation parts.</p>
+                  <p align="left"><i>Link:</i></p>
+                  <p align="left"><a class="link" href="https://inst.eecs.berkeley.edu/~cs164/fa20/" target="_blank">More Info</a></p>
+                </div>
+                <br></br>
+                <div class="container">
+                  <p align="left"><b>Network Routing Project:</b><a class="link" href="images/projects/routing_project/routing_project_figure.png" target="_blank"><img src="images/projects/routing_project/routing_project_figure.png" align="right" height="109" width="200" alt="Network Routing Project Figure"></a></p>
+                  <p align="left">Implemented distributed routing (for example distance-vector routing) & transport algorithms.</p>
+                  <p align="left"><i>Link:</i></p>
+                  <p align="left"><a class="link" href="https://github.com/NetSys/cs168_proj_routing_student" target="_blank">More Info</a></p>
+                </div>
+                <div class="container">
+                  <p align="left"><b>Seq2Seq Chatbot Project:</b><a class="link" href="images/projects/seq2seq_chatbot_project/seq2seq_chatbot_project_figure.png" target="_blank"><img src="images/projects/seq2seq_chatbot_project/seq2seq_chatbot_project_figure.png" align="right" height="67" width="220" alt="Seq2Seq Chatbot Project Figure"></a></p>
+                  <p align="left">Built a chatbot using an encoder-decoder model for the final project in Info 159. Utilized Python and Keras.</p>
+                  <p align="left"><i>Link:</i></p>
+                  <p align="left"><a class="link" href="https://people.ischool.berkeley.edu/~dbamman/nlp18.html" target="_blank">More Info</a></p>
+                </div>
+                <div class="container">
+                  <p align="left"><u>More projects listed here</u>: <a class="link" href="projects.html">Project Showcase</a></p>
                 </div>
            </div>
         <h3>Awards</h3>
